# AlphaZero

./: .gitignore  CMakeLists.txt  README.md
Alpha-Zero/: CMakeLists.txt
Alpha-Zero/include/AlphaZero/: AlphaZeroTraining.h  ReplayElement.h  Training.h
Alpha-Zero/include/AlphaZero/NeuralNetworks/: DefaultNoResidual.h  NeuralNetwork.h  NoResidualNNImpl.h
Alpha-Zero/src/AlphaZero/: AlphaZeroTraining.cpp  MonteCarloTreeSearch.cpp  Training.cpp
Alpha-Zero/src/AlphaZero/NeuralNetworks/: DefaultNoResidual.cpp
AlphaZero/: CMakeLists.txt
AlphaZero/include/: AlphaZeroTraining.h  AlphaZeroTrainingTemplate.h  AlphaZeroUtility.h  Game.h  MonteCarloTreeSearch.h  MonteCarloTreeSearchTemplate.h  MultiThreadingNeuralNetManager.h  ReplayElement.h  RingBuffer.h  Training.h  Utility.h
AlphaZero/include/NeuralNetworks/: AlphaGoZeroNet.h  AlphaZeroHalfNet.h  CutDownAlphaGoZeroNet.h  DefaultNeuralNet.h  DefaultNoResidual.h  NeuralNetwork.h  NoResidualNNImpl.h
AlphaZero/include/NeuralNetworks/Components/: ConvolutionBlock.h  PolicyHead.h  ResidualBlock.h  ValueHead.h
AlphaZero/src/: AlphaZeroTraining.cpp  AlphaZeroUtility.cpp  MonteCarloTreeSearch.cpp  MultiThreadingNeuralNetManager.cpp  Training.cpp  Utility.cpp
AlphaZero/src/NeuralNetworks/: DefaultNeuralNet.cpp  DefaultNoResidual.cpp
Games/: CMakeLists.txt
Games/include/AI/: Ai.h  NeuralNetAi.h
Games/include/Chess/: Board.h  Chess.h  ChessAdapter.h  ChessAiAdapter.h  Constant.h  GameLogic.h  MinMaxAi.h  MiniMaxAi.h  Move.h  PieceColor.h  ReducedChessAdapter.h  RenderInformation.h  Renderer.h
Games/include/Chess/Engine/: BitBoard.h  ChessEngine.h  MoveGenerator.h  NegamaxAI.h  Utility.h  ValueTables.h
Games/include/Chess/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Games/include/ConnectFour/: BitBoard.h  Board.h  ConnectFour.h  ConnectFourAdapter.h  GameLogic.h  MinMaxAi.h  MiniMaxAi.h  NegaMaxAi.h  PlayerColor.h  Renderer.h
Games/include/Other/: Ai.h  NeuralNetAi.h  Utility.h
Games/include/SDL/: Mouse.h  MouseInformation.h  SDLButton.h  SDLHandler.h
Games/include/TicTacToe/: Board.h  GameLogic.h  MinMaxAi.h  MiniMaxAi.h  Move.h  Renderer.h  TicTacToe.h  TicTacToeAdapter.h
Games/src/AI/: NeuralNetAi.cpp
Games/src/Chess/: Chess.cpp  ChessAdapter.cpp  ChessAiAdapter.cpp  GameLogic.cpp  MinMaxAi.cpp  MiniMaxAi.cpp  ReducedChessAdapter.cpp  Renderer.cpp
Games/src/Chess/Engine/: BitBoard.cpp  ChessEngine.cpp  MoveGenerator.cpp  NegamaxAI.cpp  Utility.cpp
Games/src/Chess/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
Games/src/ConnectFour/: BitBoard.cpp  ConnectFour.cpp  ConnectFourAdapter.cpp  GameLogic.cpp  MinMaxAi.cpp  MiniMaxAi.cpp  NegaMaxAi.cpp  Renderer.cpp
Games/src/Other/: NeuralNetAi.cpp  Utility.cpp
Games/src/SDL/: Mouse.cpp  SDLButton.cpp  SDLHandler.cpp
Games/src/TicTacToe/: GameLogic.cpp  MinMaxAi.cpp  MiniMaxAi.cpp  Renderer.cpp  TicTacToe.cpp  TicTacToeAdapter.cpp
Main/: CMakeLists.txt
Main/include/GameHandling/: ChessHandler.h  ConnectFourHandler.h  Evaluation.h  TicTacToeHandler.h  TrainingParameters.h  TrainingUtility.h
Main/include/UI/: MainMenu.h  MainWindow.h  MainWindow.ui  MinMax.ui  MiniMax.ui  Training.ui  TrainingThread.h
Main/include/UI/Chess/: ChessMain.ui  ChessMainMenu.h  ChessMinMaxMenu.h  ChessMiniMaxMenu.h  ChessNeuralNetMenu.h  ChessTrainingMenu.h
Main/include/UI/ConnectFour/: ConnectFourMain.ui  ConnectFourMainMenu.h  ConnectFourMinMaxMenu.h  ConnectFourMiniMaxMenu.h  ConnectFourNeuralNetMenu.h  ConnectFourTraining.h
Main/include/UI/TicTacToe/: TicTacToeMain.ui  TicTacToeMainMenu.h  TicTacToeMinMaxMenu.h  TicTacToeMiniMaxMenu.h  TicTacToeNeuralNetMenu.h  TicTacToeTraining.h
Main/src/: main.cpp
Main/src/GameHandling/: ChessHandler.cpp  ConnectFourHandler.cpp  Evaluation.cpp  TicTacToeHandler.cpp  TrainingUtility.cpp
Main/src/UI/: MainMenu.cpp  MainMenu.ui  MainWindow.cpp  MainWindow.ui  NeuralNet.ui  Training.ui  TrainingThread.cpp
Main/src/UI/Chess/: ChessMainMenu.cpp  ChessMinMaxMenu.cpp  ChessMiniMaxMenu.cpp  ChessNeuralNetMenu.cpp  ChessTrainingMenu.cpp
Main/src/UI/ConnectFour/: ConnectFourMainMenu.cpp  ConnectFourMinMaxMenu.cpp  ConnectFourMiniMaxMenu.cpp  ConnectFourNeuralNetMenu.cpp  ConnectFourTraining.cpp
Main/src/UI/TicTacToe/: TicTacToeMain.ui  TicTacToeMainMenu.cpp  TicTacToeMinMaxMenu.cpp  TicTacToeMiniMaxMenu.cpp  TicTacToeNeuralNetMenu.cpp  TicTacToeTraining.cpp
ThirdPartyLicenses/: Chess_pieces
Unit_Tests/: CMakeLists.txt  TestConfig.h  Test_ChessAdapter.cpp  Test_Chesscore.cpp  Test_ConnectFourAdapter.cpp  Test_ConnectFourBitBoard.cpp  Test_MCTS_Chess.cpp  Test_MCTS_ConnectFour.cpp  Test_MCTS_TicTacToe.cpp  Test_Miscellaneous.cpp  Test_MonteCarloTreeSearch.cpp  Test_NeuralNet.cpp  Test_Random.cpp  Test_ReducedChessAdapter.cpp  Test_RingBuffer.cpp  Test_TicTacToeAdapter.cpp  Test_Training.cpp  Test_Utility.cpp  Test_Utility.h
Unit_Tests/lib/: BUILD.bazel  CONTRIBUTING.md
Unit_Tests/lib/googlemock/: CMakeLists.txt
Unit_Tests/lib/googlemock/docs/: cook_book.md  for_dummies.md  gmock_faq.md
Unit_Tests/lib/googlemock/include/gmock/: gmock-generated-matchers.h  gmock-generated-matchers.h.pump
Unit_Tests/lib/googlemock/include/gmock/internal/: gmock-pp.h
Unit_Tests/lib/googlemock/test/: BUILD.bazel
Unit_Tests/lib/googletest/: CMakeLists.txt  README.md
Unit_Tests/lib/googletest/docs/: advanced.md
Unit_Tests/lib/googletest/include/gtest/: gtest.h
Unit_Tests/lib/googletest/include/gtest/internal/: gtest-port.h
Unit_Tests/lib/googletest/test/: BUILD.bazel
