cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 17)
project(Prototype)

if (UNIX)
	list(APPEND CMAKE_PREFIX_PATH "/home/georg/Documents/Code/Libraries/libtorch")
endif(UNIX)
if	(WIN32)
	list(APPEND CMAKE_PREFIX_PATH "C:/Users/Georg/Documents/Code/libraries/libtorch_debug")
endif(WIN32)

list(APPEND CMAKE_PREFIX_PATH "/home/georg/Documents/Code/Libraries/libtorch")
find_package(torch REQUIRED)
find_package(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()


add_subdirectory(Alpha-Zero)
add_subdirectory(Games)
add_subdirectory(Unit_Tests)
add_subdirectory(Main)